<resources>
    <string name="app_name">Brown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tandc">by clicking continue you agree to Brown\'s <a href="https://www.brown.com">Terms &amp; Conditions</a> and <a href="https://www.brown.com">Privacy policy</a></string>
    <string name="mailHint">Ex. black@blade.com</string>
    <string name="phoneHint">Ex. (+91) 820 885 1219</string>
    <string name="switchLogin">Already have a Brown account?</string>
    <string name="switchLoginButton"><![CDATA[Login with Brown >]]></string>
    <string name="cont">Continue ></string>
</resources>