<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EPSignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/input_rec"
            android:ems="10"
            android:hint="@string/mailHint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:minHeight="56dp"
            android:text="@string/cont"
            android:textAllCaps="false"
            app:cornerRadius="10sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/tandc"
            android:textAlignment="center" />

        <View
            android:id="@+id/hLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/switchLogin"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:minHeight="56dip"
            android:text="@string/switchLoginButton"
            android:textAllCaps="false"
            android:textStyle="normal"
            app:cornerRadius="10sp" />
    </LinearLayout>
</FrameLayout>